----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-05-05 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.
    * tbl_properties_operations.php: Fixed documentation link.

2004-05-09 Alexander M. Turek  <me@derrabus.de>
    * db_datadict.php: Patch #950726 (minor CSS fixes) thanks to
      Adam Shantz (musus).
    * lang/german-*.inc.php: Updates.

2004-05-09 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_operations.php, lang/*: InnoDB table defragmentation

2004-05-08 Alexander M. Turek  <me@derrabus.de>
    * config.inc.php, db_details_structure.php, Documentation.html,
      header.inc.php, left.php, main.php, images/*, libraries/common.lib.php,
      libraries/config_import.lib.php:
      Patch #947190 (Redesign) - Part 1, thanks to Michael Keck (mkkeck).

2004-05-07 Alexander M. Turek  <me@derrabus.de>
    * calendar.php: Added missing CVS-ID-Tag.

2004-05-07 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.6.0-alpha2 released

2004-05-07 Garvin Hicking <pma@supergarv.de>
    * db_details_db_info.php: When $cfg['ShowTooltipAliasTB'] is set to
      'nested', the displayed table names should always be the real names,
      not the table comments.
    * libraries/display_tbl.lib.php, libraries/display_tbl_links.lib.php,
      librarries/functions.js: RFE #856208 - Show (un)check all boxes
      for query results.
    * tbl_create.php, tbl_addfield.php, tbl_properties.inc.php:
      RFE #949594 - Allow changing amount of columns for adding fields/
      creating table (without losing previous data)

2004-05-07 Alexander M. Turek  <me@derrabus.de>
    * README: Updated copyright as discussed a couple of days ago.

2004-05-06 Garvin Hicking <pma@supergarv.de>
    * libraries/display_tbl.lib.php: Bug #949087 - Fixed JS error for
      mousepointer hovering on rows w/o checkboxes.

2004-05-05 Marc Delisle  <lem9@users.sourceforge.net>