@@ -318,7 +318,7 @@ else {
                 <td align="center" bgcolor="<?php echo $bgcolor; ?>">
                     <input type="checkbox" name="selected_tbl[]" value="<?php echo $table_encoded; ?>" id="checkbox_tbl_<?php echo $i; ?>"<?php echo $checked; ?> />
                 </td>
-                <td bgcolor="<?php echo $bgcolor; ?>" nowrap="nowrap" <?php //echo $click_mouse; ?>>
+                <td bgcolor="<?php echo $bgcolor; ?>" nowrap="nowrap" <?php echo $click_mouse; ?>>
                     &nbsp;<b><label onclick="(document.getElementById('checkbox_tbl_<?php echo $i; ?>') ? return false : return true)" for="checkbox_tbl_<?php echo $i; ?>" title="<?php echo $alias; ?>"><?php echo $truename; ?></label>&nbsp;</b>&nbsp;
                 </td>
                 <td align="center" bgcolor="<?php echo $bgcolor; ?>">
@@ -346,17 +346,17 @@ else {
         ?>
                 </td>
                 <td align="center" bgcolor="<?php echo $bgcolor; ?>">
-        <a href="tbl_change.php?<?php echo $tbl_url_query; ?>">
-            <?php echo $titles['Insert']; ?></a>
-                </td>
-                <td align="center" bgcolor="<?php echo $bgcolor; ?>">
-        <a href="tbl_properties_structure.php?<?php echo $tbl_url_query; ?>">
-            <?php echo $titles['Properties']; ?></a>
-                </td>
-                <td align="center" bgcolor="<?php echo $bgcolor; ?>">
-        <a href="sql.php?<?php echo $tbl_url_query; ?>&amp;reload=1&amp;purge=1&amp;sql_query=<?php echo urlencode('DROP TABLE ' . PMA_backquote($table)); ?>&amp;zero_rows=<?php echo urlencode(sprintf($strTableHasBeenDropped, htmlspecialchars($table))); ?>"
-            onclick="return confirmLink(this, 'DROP TABLE <?php echo PMA_jsFormat($table); ?>')">
-            <?php echo $titles['Drop']; ?></a>
+                    <a href="tbl_change.php?<?php echo $tbl_url_query; ?>">
+                        <?php echo $titles['Insert']; ?></a>
+                            </td>
+                            <td align="center" bgcolor="<?php echo $bgcolor; ?>">
+                    <a href="tbl_properties_structure.php?<?php echo $tbl_url_query; ?>">
+                        <?php echo $titles['Properties']; ?></a>
+                            </td>
+                            <td align="center" bgcolor="<?php echo $bgcolor; ?>">
+                    <a href="sql.php?<?php echo $tbl_url_query; ?>&amp;reload=1&amp;purge=1&amp;sql_query=<?php echo urlencode('DROP TABLE ' . PMA_backquote($table)); ?>&amp;zero_rows=<?php echo urlencode(sprintf($strTableHasBeenDropped, htmlspecialchars($table))); ?>"
+                        onclick="return confirmLink(this, 'DROP TABLE <?php echo PMA_jsFormat($table); ?>')">
+                        <?php echo $titles['Drop']; ?></a>
                 </td>
                 <td align="center" bgcolor="<?php echo $bgcolor; ?>">
         <?php
