@@ -13,6 +13,9 @@ $Source$
     * db_datadict.php: Patch #950726 (minor CSS fixes) thanks to
       Adam Shantz (musus).
     * lang/german-*.inc.php: Updates.
+    * db_details_structure.php, main.php:
+      - coding standards;
+      - removed debug code.
 
 2004-05-09 Marc Delisle  <lem9@users.sourceforge.net>
     * tbl_properties_operations.php, lang/*: InnoDB table defragmentation
